<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity2"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="BẠN NÊN CHỌN"
        android:textSize="35dp"
        android:gravity="center"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_name"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="name"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center"/>
        <TextView
            android:id="@+id/tv_age"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="age"
            android:textSize="25dp"
            android:textStyle="bold"
            android:textColor="#000"
            android:gravity="center"/>
    </LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reason"
        android:gravity="center"
        android:textSize="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btn_thanks"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/thanks"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/btn_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/again"
            android:layout_weight="1"/>
    </LinearLayout>
    <Button
        android:id="@+id/btn_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_gravity="center"
        android:text="Thoát"/>
</LinearLayout>